@@ -1,4 +1,5 @@
 0.5.0 - currently working on
+- [#1837] Change: Add discardInstance() to the header proxy factory
 - [#1797] Feature: Test that the mailer factory can create real mailers
 - [#1831] Change: Remove $this->originalConfiguration from the configuration proxy's testcase
 - [#1818] Change: Comment and whitespace consistency cleanup
